--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,92 +1,73 @@
 footer { width: 100%; }
-
-.footer-container { 
-    display: flex; 
-    position: relative;  
-}
-
-footer hr {
-    width: 90%;
-    border: 1px solid var(--gray);
-    height: 1px; 
-    margin: 0 auto;
-}
-
-/* .footer-enarm-logo {
-    width: 159px;
-    height: 159px;
-} */
-
-.footer-enlaces { 
-    display: flex;
-    flex-flow: row nowrap; 
-    justify-content: space-between;
-}
-
-/* .footer-enlaces .enlaces-right {
-    width: 100px;
-}
-
-.footer-enlaces .enlaces-right,
-.footer-enlaces .enlaces-left {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-} */
-
-/* .footer-link.home { width: 42px; }
-.footer-link.about-us { width: 71px; }
-.footer-link.about-course { width: 106px; }
-.footer-link.blog { width: 35px; margin-top: 37px; }
-.footer-link.free-test { width: 100px; }
-.footer-link.contact { width: 76px; } */
- 
-
-/* .footer-enlaces .footer-link:hover {
-    font-weight: 700;
-} */
-
-.footer-link {
-    text-decoration: none;
-    color: var(--black);
-    display: flex; 
-}
-
-div.footer-contactanos {
-    display: flex;
-
-}
-div.footer-contactanos div.contact-links {
-    display: flex;  
-}
-
-.footer-contactanos .contact-icon {
-    width: 24px;
-    height: 24px;
-}
-
+div.footer-container { display: flex; position: relative; flex-direction: column; align-items: center; padding: 90px 24px 113px 24px; }
+div.footer-container button { margin-bottom: 40px; }
+img.footer-enarm-logo { margin-bottom: 58px; }
+footer hr { width: 90%; border: 1px solid var(--gray); height: 1px; margin: 0 auto; } 
+.footer-enlaces { display: flex; flex-flow: row nowrap; justify-content: space-between; }
+.footer-link { text-decoration: none; color: var(--black); display: flex; align-items: center; gap: 4px; }
+div.footer-contactanos { display: flex; flex-direction: column; align-items: center; gap: 14px; width: 100%; }
+div.footer-contactanos div.contact-links { display: flex; width: 100%; justify-content: space-between;}
+.footer-contactanos .contact-icon { width: 20px; height: 20px; }
 .footer-contactanos span,
-.footer-enlaces span {
-    color: var(--gray);
+.footer-enlaces span { color: var(--gray); }
+.footer-social-media { display: flex; margin-top: 32px; width: 100%; justify-content: space-evenly; }
+
+/* // Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) {   
+    div.footer-container { max-width: 576px; margin: 0 auto;}
+} 
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+    div.footer-container { flex-direction: row; justify-content: space-between; max-width: 768px; margin: 0 auto; }
+    div.footer-contactanos { max-width: 113px; }
+    div.footer-contactanos div.contact-links { display: flex; width: 100%; max-width: 113px; gap: 19px; flex-direction: column; }
+    .footer-link { gap: 12px; }
+    div.button-with-links { width: 337px; }
+    .footer-social-media { margin: 0px; }
+    div.footer-container button { margin-bottom: 32px; }
 }
 
-.footer-social-media {
-    width: 100%; 
-    display: flex;
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+    div.footer-container { max-width: 992px; flex-direction: row; justify-content: space-between; margin: 0 auto; align-items: flex-start; }
+    div.footer-contactanos { max-width: 113px; }
+    div.footer-contactanos div.contact-links { display: flex; width: 100%; max-width: 113px; gap: 16px; flex-direction: column; }
+    .footer-link { gap: 12px; }
+    div.button-with-links { width: 216px; }
+    .footer-social-media { margin: 0px; }
+    div.footer-container button { margin-bottom: 32px; }
+    div.footer-enlaces { width: 302px; height: 169px; }
+    .enlaces-left, .enlaces-right { display: flex; flex-direction: column; gap: 16px; }
+    .enlaces-right { margin-top: 37px; }
 }
 
-.footer-social-media .vectors {
-    width: 24px;
-    height: 24px;
-    color: var(--gray);
-    display: block;
+/* // X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) and (max-width: 1399.98px){ 
+    div.footer-container { max-width: 1200px; flex-direction: row; justify-content: space-between; margin: 0 auto; align-items: flex-start; }
+    div.footer-contactanos { max-width: 113px; }
+    div.footer-contactanos div.contact-links { display: flex; width: 100%; max-width: 113px; gap: 16px; flex-direction: column; }
+    .footer-link { gap: 12px; }
+    div.button-with-links { width: 216px; }
+    .footer-social-media { margin: 0px; justify-content: space-between;}
+    div.footer-container button { margin-bottom: 32px; }
+    div.footer-enlaces { width: 302px; height: 169px; }
+    .enlaces-left, .enlaces-right { display: flex; flex-direction: column; gap: 16px; }
+    .enlaces-right { margin-top: 37px; }
+    footer hr { max-width: 1300px; }
 }
 
-.footer-social-media .vectors img{
-    transition: all 350ms;
-}
- 
-div.footer-social-media .vectors:hover img {
-    transform: scale(1.3);
-    transition: all 350ms;
+/* // XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) { 
+    div.footer-container { max-width: 1440px; flex-direction: row; justify-content: space-between; margin: 0 auto; align-items: flex-start; }
+    div.footer-contactanos { max-width: 113px; }
+    div.footer-contactanos div.contact-links { display: flex; width: 100%; max-width: 113px; gap: 16px; flex-direction: column; }
+    .footer-link { gap: 12px; }
+    div.button-with-links { width: 216px; }
+    .footer-social-media { margin: 0px; justify-content: space-between; }
+    div.footer-container button { margin-bottom: 32px; }
+    div.footer-enlaces { width: 302px; height: 169px; }
+    .enlaces-left, .enlaces-right { display: flex; flex-direction: column; gap: 16px; }
+    .enlaces-right { margin-top: 37px; }
+    footer hr { max-width: 1300px; }
 }
