--- a/src/css/homepage/Explore.css
+++ b/src/css/homepage/Explore.css
@@ -1,137 +1,103 @@
-div.explore {
-    width: 100%; 
-    display: block;
-    position: relative; 
-    background-color: var(--blue);
-    padding-top: 72px;
+/* // X-Small devices (portrait phones, less than 576px) */ 
+
+div.explore { width: 100%; background-color: var(--blue); }
+div.explore div.explore-container { position: relative; display: block; width: 100%; padding: 72px 24px; }
+div.explore-container-head { margin-bottom: 36px; }
+div.explore-container-body { display: flex; flex-direction: column; margin-top: 20px; gap: 40px }
+div.explore-cards { display: flex; flex-direction: column; gap: 12px; }
+div.card-item { display: flex; flex-flow: row nowrap; min-height: 135px; border: 2px solid var(--sky-blue); border-radius: 10px; justify-content: flex-start; align-items: center; }
+div.card-item-icon { display: block; margin: 20px 16px 20px 20px; }
+div.card-item-icon img { transform: scale(1); transition: transform 350ms; height: 70px; }
+div.card-item-icon:hover img { transform: scale(1.20); transition: transform 350ms; }
+div.card-item-text { height: 100%; display: flex; flex-flow: column; justify-content: space-between; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; gap: 8px;}
+div.explore-form form { display: flex; flex-direction: column; gap: 16px; }
+div.explore-form form .form-group { display: flex; flex-direction: column; gap: 8px; }
+div.explore-form form .form-group input { width: 100%; height: 45px; border: 1px solid gray; border-radius: 10px; padding: 16px 12px; }
+div.explore-form form .form-group input::placeholder { font-family: PoppinsRegular; font-style: normal; font-weight: 400; font-size: 14px; line-height: 20px; color: #96ACBC; }
+div.explore-form form button[type=submit] { margin-top: 8px; }
+
+    
+/* // Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) {      
+    div.explore-container-body { width: 100%; max-width: 556px; margin: 0 auto; }
+    div.card-item { max-height: 135px!important; min-height: unset!important; }
+    div.card-item-text { gap: 8px; }
+    div.explore-form form { display: flex; flex-direction: column; gap: 16px; align-items: center; }
+    div.explore-form form div.form-group, div.explore-form form div.whatsapp-input { width: 100%; }
 }
 
-div.explore-container {
-    position: relative;
-    display: block;
-    padding: 0 120px;
-    margin: 0 auto;
-    max-width: 1440px;
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+    div.explore-container-body { width: 100%; flex-direction: row; flex-wrap: nowrap; max-width: 744px; gap: 20px; margin: 0 auto; }
+    div.explore-form, div.explore-cards { width: 100%; }
+    div.explore-container-body { gap: 20px; }
+    div.explore-form form { display: flex; flex-direction: column; gap: 16px; align-items: center; }
+    div.explore-form form div.form-group, div.explore-form form div.whatsapp-input { width: 100%; }
+}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) {  
+    div.explore div.explore-container {
+        position: relative;
+        display: block;
+        width: 100%;
+        padding: 100px 32px;
+    }
+    div.explore-container-head { max-width: 792px; margin: 0 auto 32px auto; }
+    div.explore-container-body { width: 100%; flex-direction: row-reverse; flex-wrap: nowrap; max-width: 992px; margin: 0 auto; }
+    div.explore-form, div.explore-cards { width: 100%; max-height: 414px;} 
+    div.explore-form form { display: flex; flex-direction: column; gap: 16px; align-items: center; }
+    div.explore-form form div.form-group, div.explore-form form div.whatsapp-input { width: 100%; }
+    div.card-item { min-height: 135px; min-height: unset; }
+    /* div.explore-form form div.whatsapp-input div.form-group {
+        max-width: 246px;
+    } */
+}
+
+/* // X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) and (max-width: 1399.98px) { 
+    div.explore div.explore-container {
+        position: relative;
+        display: block;
+        width: 100%;
+        padding: 100px 32px;
+    }
+    div.explore-container-head { max-width: 792px; margin: 0 auto 32px auto; }
+    div.explore-container-body { width: 100%; flex-direction: row-reverse; flex-wrap: nowrap; max-width: 992px; margin: 0 auto; }
+    div.explore-form, div.explore-cards { width: 100%; max-height: 414px;} 
+    div.explore-form form { display: flex; flex-direction: column; gap: 27px; align-items: center; }
+    div.explore-form form div.form-group, div.explore-form form div.whatsapp-input { width: 100%; }
+    div.card-item { min-height: 135px; min-height: unset; }
+    div.explore-form form div.whatsapp-input { 
+        display: flex; flex-direction: row; flex-wrap: nowrap; align-items: center; gap: 24px;
+    }
+    div.explore-form form div.whatsapp-input button { margin-top: -2px; max-width: 216px; }
+    div.explore-form form div.whatsapp-input div.form-group {
+        max-width: 246px;
+    }
+
+}
+
+/* // XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {   
+    div.explore div.explore-container {
+        position: relative;
+        display: block;
+        width: 100%;
+        padding: 100px 120px;
+    }
+    div.explore-container-head { max-width: 792px; margin: 0 auto 32px auto; }
+    div.explore-container-body { width: 100%; flex-direction: row-reverse; flex-wrap: nowrap; max-width: 1200px; margin: 0 auto; justify-content: space-between; gap: 126px}
+    div.explore-form { width: 100%; max-height: 414px; max-width: 486px; } 
+    div.explore-cards { width: 100%; max-height: 414px; max-width: 588px; } 
+    div.explore-form form { display: flex; flex-direction: column; gap: 27px; align-items: center; }
+    div.explore-form form div.form-group, div.explore-form form div.whatsapp-input { width: 100%; }
+    div.card-item { min-height: 135px; min-height: unset; }
+    div.explore-form form div.whatsapp-input { 
+        display: flex; flex-direction: row; flex-wrap: nowrap; align-items: center; gap: 24px;
+    }
+    div.explore-form form div.whatsapp-input button { margin-top: -2px; max-width: 216px; }
+    div.explore-form form div.whatsapp-input div.form-group {
+        max-width: 246px;
+    }
 } 
-
-div.explore-container-body {
-    display: flex; 
-    flex-wrap: nowrap;
-    justify-content: space-between;
-}
- 
-
-div.explore-form form div.form-group {
-    width: 100%;
-    min-height: 120px;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    margin-bottom: 16px; 
-}
-
-div.explore-form form div.form-group input {
-    width: 100%;
-    height: 56px;
-    border: 1px solid #96ACBC;
-    border-radius: 10px;
-    padding: 1rem;
-}
-
-/* div.explore-form form div.whatsapp-input {
-    width: 100%;
-    display: flex;
-    flex-flow: row nowrap;
-    gap: 24px;
-    justify-content: space-between;
-    align-items: flex-start;
-}  */
-
-/* div.whatsapp-input div.form-group input[type=text] {
-    width: 100%;
-    height: 56px;
-} */
-
-div.explore-form form div.form-group input::placeholder {
-    font-family: PoppinsRegular;
-    font-weight: 400;
-    color: #96ACBC;
-    margin-bottom: 8px;
-    font-size: 14px;
-    line-height: 20px;
-    font-style: normal;
-}
- 
-/* .explore-cards {
-    width: 588px;
-    height: 414px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-} */
-  
-/* .card-item {
-    display: flex;
-    flex-flow: row nowrap;
-    height: 130px;
-    width: 588px;
-    border: 2px solid var(--sky-blue);
-    border-radius: 10px;
-    justify-content: flex-start;
-    align-items: center; 
-    animation: cardSize 2s ease infinite alternate;
-} */
-  
-/* .card-item-text {
-    height: 100%;
-    display: flex;
-    flex-flow: column;
-    justify-content: space-between;
-    padding-top: 20px;
-    padding-bottom: 20px;
-} */
-  
-/* .card-item-icon {
-    width: 114px !important;
-    display: block; 
-} */
-
-/* .card-item-icon img {
-    transform: scale(1);
-    transition: transform 350ms;
-    height: 70px;
-} */
-
-/* .card-item-icon:hover img {
-    transform: scale(1.20);
-    transition: transform 350ms;
-} */
-
-
-/* .card-item-text > h1 {
-    display: block;
-    height: 26px;
-    width: 444px;
-    font-style: normal;
-    font-weight: 700;
-    color: white;
-    font-size: 16px;
-    line-height: 24px;
-} */
-  
-/* .card-item-text > p {
-    color: white;
-    text-align: start;
-    font-family: PoppinsRegular;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    display: block;
-    width: 444px;
-    height: 50px;
-} */
-
-/* @keyframes cardSize {
-    0% { height: 128px; width: 586px; }
-    100% { height: 134px; width: 596px; }
-} */
