--- a/src/css/LoginPage.css
+++ b/src/css/LoginPage.css
@@ -13,7 +13,32 @@ div.login-container form hr { margin: 40px auto 20px auto; }
 div.login-container form div.form-group div.sub-group div.checkbox label { line-height: 21px; position: relative; top: -1px; }
 div.login-container form div.form-group div.sub-group { display: flex; flex-flow: row nowrap; justify-content: space-between; }
 div.login-container form div.form-group div.sub-group div.checkbox { display: flex; gap: 4px; }
+.password-input {
+    position: relative;
+}
+  
+.password-input input {
+padding: 10px;
+border: none;
+border-radius: 5px;
+box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+width: 100%;
+font-size: 16px;
+outline: none;
+}
 
+.password-login-icon {
+position: absolute;
+right: 10px;
+top: 50%;
+transform: translateY(-50%);
+cursor: pointer;
+}
+
+.password-login-icon svg {
+font-size: 25px;
+margin-right: 5px;
+}
 /* // Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767.98px) {   
     div.login div.container { max-width: 576px; margin: 0px auto; }
