Fixing URLs for behavior

--- a/src/css/validate_password/ValidatePasswordInput.css
+++ b/src/css/validate_password/ValidatePasswordInput.css
@@ -16,6 +16,7 @@ input-password::placeholder {
 }
 .password-validations {
   margin-left: 10px;
+  margin-top: 10px;
 }
 .password-validation span {
   margin-left: 10px;
@@ -57,3 +58,4 @@ input-password::placeholder {
 .invalid {
   color: red;
 }
+
