--- a/src/css/validate_password/ValidatePasswordInput.css
+++ b/src/css/validate_password/ValidatePasswordInput.css
@@ -6,6 +6,7 @@ input-password {
   padding: 16px;
   margin-bottom: 20px;
 }
+
 input-password::placeholder {
   font-family: PoppinsRegular;
   font-style: normal;
@@ -14,10 +15,11 @@ input-password::placeholder {
   line-height: 20px;
   color: #96acbc;
 }
+
 .password-validations {
-  margin-left: 10px;
-  margin-top: 10px;
+  padding: 8px;
 }
+
 .password-validation span {
   margin-left: 10px;
   font-family: PoppinsRegular;
@@ -25,8 +27,9 @@ input-password::placeholder {
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: #96acbc;
+  color: #596670;
 }
+
 .password-input-container {
   display: flex;
   align-items: center;
@@ -36,8 +39,7 @@ input-password::placeholder {
 .password-icon {
   position: absolute;
   right: 1rem;
-  top: 22%;
-  transform: translateY(-80%);
+  top: 8%;
   cursor: pointer;
 }
 
@@ -58,4 +60,3 @@ input-password::placeholder {
 .invalid {
   color: red;
 }
-
