--- a/src/pages/login/index.module.css
+++ b/src/pages/login/index.module.css
@@ -1,4 +1,4 @@
-.register {
+.login {
   width: 100%;
   position: relative;
   overflow-x: hidden;
@@ -21,7 +21,7 @@
 }
 
 
-.registerContainer {
+.loginContainer {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -78,9 +78,10 @@
 .linkLabel {
   font-family: PoppinsRegular;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 14px;
   line-height: 1.5;
+  text-decoration: none;
 }
 
 .submitButton {
@@ -108,10 +109,21 @@
   display: none;
 }
 
+.subGroup {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  margin: 1rem 0;
+}
+
+.checkBox {
+  display: flex;
+  gap: 0.5rem;
+}
 
 @media screen and (min-width: 480px) {
 
-  .register {
+  .login {
     padding: 0;
   }
 
@@ -129,7 +141,7 @@
 
 @media screen and (min-width: 768px) {
 
-  .register {
+  .login {
     overflow-y: hidden;
   }
 
@@ -137,7 +149,7 @@
     margin: 0;
   }
 
-  .registerContainer {
+  .loginContainer {
     flex-direction: row-reverse;
     justify-content: space-evenly;
     align-items: center;
@@ -152,6 +164,7 @@
   .imageContainer {
     margin-top: auto;
   }
+
   .imageContainer img {
     min-width: 337px;
   }
@@ -173,9 +186,8 @@
     min-width: 460px;
   }
 
-  .registerContainer {
+  .loginContainer {
     height: calc(100vh - 104px);
-    justify-content: space-around;
   }
 
   .containerHead {
@@ -196,7 +208,7 @@
     z-index: 990;
   }
 }
- 
+
 @media screen and (min-width: 1200px) {
 
   .subContainer {
@@ -206,5 +218,5 @@
 
   .imageContainer img {
     min-width: 508px;
-  } 
+  }
 }
